fix: add logo and fix colors

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div id="welcome">
+    <img src="assets/community_logo.png">
     <p>Soft Skills Club - Bingo</p>
     <div class="buttons">
       <div class="button" data-cells="9">START!</div>
