fix: fix colors

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="welcome">
     <img src="assets/community_logo.png">
-    <p>Soft Skills Club - Bingo</p>
+    <p>Soft Skills Bingo</p>
     <div class="buttons">
       <div class="button" data-cells="9">START!</div>
     </div>
