rtk changes, new fun

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Soft Skills Club - Bingo</title>
+  <title>Омничат - Bingo</title>
   <link rel="stylesheet" href="assets/style.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 <body>
   <div id="welcome">
-    <img src="assets/community_logo.png">
-    <p>Soft Skills Bingo</p>
+    <img src="assets/logo.png">
+    <p>Daily Bingo</p>
     <div class="buttons">
       <div class="button" data-cells="9">START!</div>
     </div>
@@ -19,7 +19,7 @@
   </div>
   <div id="bingo">
     <div>Bingo!</div>
-    <div id="retry">Retry</div>
+    <div id="retry">Повторим?</div>
   </div>
   <script src="assets/script.js"></script>
 </body>
