--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Омничат - Bingo</title>
+  <title>QA - Bingo</title>
   <link rel="stylesheet" href="assets/style.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 <body>
   <div id="welcome">
-    <img src="assets/logo.png">
-    <p>Daily Bingo</p>
+    <p>QA Bingo</p>
     <div class="buttons">
-      <div class="button" data-cells="9">START!</div>
+      <div class="button" data-cells="12">START!</div>
     </div>
   </div>
   <div id="cells">
